# UniCourseRegSystemGUIGroup8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  creg8Version.h.in
android/: AndroidManifest.xml  build.gradle
include/: accountpagewindow.hpp  loginwindow.hpp  signupwindow.hpp  unicouregsysgro8.hpp
resources/: creg-gui.rc  uniCourseRegGroup8.qrc
src/: accountpagewindow.cpp  loginwindow.cpp  main.cpp  signupwindow.cpp  unicouregsysgro8.cpp
